# audiomancer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  _CLAUDE_backup.md  _README_backup.md  _pyproject_backup.toml  pyproject.toml
_docs_backup/: PIVOT_REFERENCE.md  SWOT.md  TODO.md  activity_log.jsonl  decisions.md
_examples_backup/: 01_sine_440hz.py  02_major_chord.py  03_binaural_alpha.py  04_harmonic_drone.py  05_pentatonic_arpeggio.py  06_noise_texture.py  07_stereo_ping_pong.py  08_schumann_resonance.py  09_waveform_comparison.py  10_ambient_layer_mix.py  11_fade_in_out.py  12_adsr_keys.py  13_smooth_vs_linear_fade.py  14_exponential_fade.py  15_swell_pad.py  16_gate_rhythm.py  17_tremolo_sine.py  18_automation_curve.py  19_binaural_with_envelope.py  20_ambient_session_v2.py  21_lowpass_sweep.py  22_eq_sculpted_drone.py  23_stereo_widening.py  24_reverb_room_sizes.py  25_delay_echo.py  26_distortion_warmth.py  27_effect_chain.py  28_bandpass_radio.py  29_reverb_wash.py  30_ambient_session_v3.py  31_track_basic.py  32_multitrack_mix.py  33_panning_demo.py  34_mute_solo.py  35_bus_routing.py  36_bus_effects.py  37_session_export.py  38_automation_volume.py  39_complex_session.py  40_ambient_session_v4.py  (+23 more)
_fractal_backup/: __init__.py  constants.py  drums.py  effects.py  envelopes.py  export.py  generative.py  generators.py  mixer.py  modulation.py  music_theory.py  presets.py  sequencer.py  signal.py  synth.py  track.py
_tests_backup/: test_drums.py  test_effects.py  test_envelopes.py  test_export.py  test_generative.py  test_generators.py  test_mixer.py  test_modulation.py  test_music_theory.py  test_presets.py  test_sequencer.py  test_signal.py  test_smoke.py  test_synth.py  test_track.py
(+120 files in other folders)
