[project]
name = "audiomancer"
version = "0.1.0"
description = "Minimal Python audio scripts for ambient sound design"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "pedalboard",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
