[project]
name = "audiomancer"
version = "0.3.0"
description = "Minimal Python audio scripts for ambient sound design"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "soundfile>=0.12,<1",
    "pedalboard>=0.8,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4",
]
piano = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # sys.path.insert before imports
"scripts/piano/*.py" = ["E402"]
